* FIX: network-dependent timeouts didn't work; * FIX: TGZ archive has the same with Docker Java options, specified the right main class, better "doc" directory with README; * FIX: Kamon exception "An error occurred while trying to apply an advisor"; * Docker image for ride-runner is built in own directory (outside Wave Node one); * Moved configs to make a reference with all values in README; * Building DEB (WIP); * README.md: how to build, install and run (WIP).